# amos

./: README.md  pyproject.toml
amos/: __init__.py  base.py  convert.py  foundry.py  mapping.py  modify.py  registry.py  sequence.py  utilities.py
amos/base/: bunches.py  mappings.py  sequences.py
amos/builders/: factories.py  registries.py
amos/change/: convert.py  modify.py  represent.py  validate.py
amos/composites/: core.py  forms.py  graphs.py  hybrids.py  traits.py  trees.py
amos/construct/: configuration.py  create.py  factories.py  filing.py  lazy.py
amos/containers/: bases.py  composites.py  configuration.py  graph.py  hybrid.py  mappings.py  sequences.py  tree.py
amos/core/: check.py  composites.py  convert.py  graph.py  hybrid.py  transform.py  tree.py
amos/files/: formats.py  lazy.py  manager.py  template.py
amos/observe/: check.py  clock.py  examine.py  examiners.py  module.py  package.py  registries.py  report.py  traits.py
amos/project/: configuration.py  filing.py  helpers.py  interface.py  nodes.py  options.py  stages.py  workers.py  workshop.py
amos/repair/: convert.py  modify.py  validate.py
amos/report/: clock.py  recap.py
tests/: test_amos.py  test_base.py  test_core.py  test_graph.py  test_interface.py  test_observe.py  test_stages.py
tests/test_folder/: dummy_module.py
