[tool.poetry]
name = "amos"
version = "0.1.1"
description = "Your Python project companion"
authors = ["corey rayburn yung <coreyrayburnyung@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/WithPrecedent/amos"
repository = "https://github.com/WithPrecedent/amos"

[tool.poetry.dependencies]
more-itertools = "^8.10.0"
python = "^3.9"
# toml = {version = "^0.10.2", optional = true, extras = ["formats"]}
# pyyaml = {version = "^6.0", optional = true, extras = ["formats"]}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.extras]
formats = ["toml", "pyyaml"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
